# urdf-compose

./: CHANGELOG.md  LICENSE  README.md  __init__.py  gen_big_extender.py  mano.toml  poetry_scripts.py  post.md  pyproject.toml  setup.cfg  undefined_behavior.md  urdf_compose.py  urdf_obj.py
.github/workflows/: cd.yml  ci.yml
examples/branched_chain/: make_branched_chain.py  simple_branched_chain.urdf  v_rod.urdf
examples/simple_chain/: chain.urdf  make_chain.py  rod_pair.urdf
tests/: board.urdf  expected.urdf  extender.urdf  extender2.urdf  hoop.urdf  output.urdf  rod.urdf  test_name_map.py  test_urdf_compose.py
urdf_compose/: README.md  __init__.py  compose.py  composed_urdf.py  connect.py  resolve_connections.py  urdf_compose.py  urdf_compose_error.py  urdf_obj.py  utils.py  xml_utils.py
urdf_compose/urdfs/: dup_prepared.urdf  putTogether2.urdf
urdfs/: example.urdf  extender.urdf  putTogether.urdf  put_together.urdf
